# Step-tracker-with-active-objects

./: CMakeLists.txt  README.md  nrf52833dk_nrf52833.overlay  prj.conf
src/: active_object.c  active_object.h  ao_events.c  ao_events.h  ble_ao.c  ble_ao.h  ble_pedometer_srv.c  ble_pedometer_srv.h  hrm_ao.c  hrm_ao.h  imu_ao.c  imu_ao.h  lsm6dso_shim.c  lsm6dso_shim.h  main.c  max30102.c  max30102.h
